--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon_launcher"
+        android:icon="@mipmap/sudo_ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/sudo_ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".IntroActivity">
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MenuPrincipalActivity" />
-        <activity android:name=".PartidaActivity" />
+        <activity android:name=".PartidaActivity"
+            android:configChanges="orientation"/>
         <activity android:name=".WebAjudaActivity">
             <intent-filter>
                 <action android:name="WebAjudaACtivity" />
